@@ -462,33 +462,6 @@ class TestCase::Net::SSLeay {
   static method SSL_METHOD : int () {
     
     {
-      my $ssl_method = Net::SSLeay::SSL_METHOD->SSLv23_method;
-      unless ($ssl_method is_type Net::SSLeay::SSL_METHOD) {
-        return 0;
-      }
-      
-      my $ssl_ctx = Net::SSLeay::SSL_CTX->new($ssl_method);
-    }
-    
-    {
-      my $ssl_method = Net::SSLeay::SSL_METHOD->SSLv23_client_method;
-      unless ($ssl_method is_type Net::SSLeay::SSL_METHOD) {
-        return 0;
-      }
-      
-      my $ssl_ctx = Net::SSLeay::SSL_CTX->new($ssl_method);
-    }
-    
-    {
-      my $ssl_method = Net::SSLeay::SSL_METHOD->SSLv23_server_method;
-      unless ($ssl_method is_type Net::SSLeay::SSL_METHOD) {
-        return 0;
-      }
-      
-      my $ssl_ctx = Net::SSLeay::SSL_CTX->new($ssl_method);
-    }
-    
-    {
       my $ssl_method = Net::SSLeay::SSL_METHOD->TLS_method;
       unless ($ssl_method is_type Net::SSLeay::SSL_METHOD) {
         return 0;
